@@ -1,0 +1,6 @@
+<%= @added_to %>
+<%= @attachments.size %> ファイルが追加されました。
+<% @attachments.each do |attachment | %>
+- <%= attachment.filename %><% end %>
+
+<%= @url %>
